samples/_failures_safe/1761315425_352e31_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7772b672.c: In function ‘main’:
./samples/SAFE/__tmp_7772b672.c:144:5: error: expected ‘,’ or ‘;’ at end of input
  144 |     double cpu_time = ((double)(end - start))
      |     ^~~~~~
./samples/SAFE/__tmp_7772b672.c:144:5: error: expected declaration or statement at end of input
